--- a/app/src/main/res/layout/widget_layout.xml
+++ b/app/src/main/res/layout/widget_layout.xml
@@ -23,7 +23,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="2.0"
-                android:text="@string/termux"
+                android:text="@string/linuxdroid"
                 android:textColor="@android:color/primary_text_dark"
                 android:textSize="18sp" />
         </LinearLayout>
